--- a/beta/assets/css/style.css
+++ b/beta/assets/css/style.css
@@ -9,7 +9,7 @@ Website: http://htmlstream.com/preview/unify
 /*Import Google Fonts*/
 @import url(http://fonts.googleapis.com/css?family=Monda:400,700);
 @import url(http://fonts.googleapis.com/css?family=Open+Sans);
-
+@import url(http://fonts.googleapis.com/css?family=Ubuntu:400,700);
 * {
 	border-radius:0 !important;
 }
@@ -24,7 +24,9 @@ body {
 
 p, a, li { 
 	color:#555;
-	line-height:1.6; 
+	line-height:1.6;
+	font-family:'Ubuntu',Arial,serif;
+	font-weight:400;  
 }
 
 a,
