Add intern policy and logo

--- a/beta/assets/css/headers/header1.css
+++ b/beta/assets/css/headers/header1.css
@@ -136,6 +136,11 @@
 	position:absolute;
 	top:-5px;
 	left:0;
+	font-size: 18px;
+	/*max-height:40px;*/
+}
+#logo-header {
+	max-height: 50px;
 }
 
 /*Menu*/
