--- a/beta/assets/css/style_responsive.css
+++ b/beta/assets/css/style_responsive.css
@@ -3,7 +3,12 @@
 	.navbar .nav > li > a {
 		font-size: 14px;
 	}
+	.logo {
+		font-size: 18px;
+	}
 }
+
+
 
 /*For Portfolio Page*/
 @media (max-width: 1200px) {
@@ -16,6 +21,7 @@
 	.portfolio-responsive a.info {
 		margin-top:55px !important;
 	}
+
 }
 @media (max-width: 767px) {
 	.portfolio-responsive h2 {
@@ -23,6 +29,9 @@
 	}
 	.portfolio-responsive a.info {
 		margin-top:20px !important;
+	}
+	.logo {
+		font-size: 24px;
 	}
 }
 /*End For Portfolio Page*/
@@ -35,6 +44,10 @@
 	.collapse.in li a.dropdown-toggle { 
 		border:none;
 	}
+	.logo {
+		font-size: 18px;
+	}
+}
 }
 
 @media (max-width: 980px) {
@@ -70,6 +83,10 @@
 	.da-thumbs li article em {
 		display:none !important;
 	}
+	.logo {
+		font-size: 18px;
+	}
+}
 }
 
 @media (max-width: 900px) {
@@ -103,6 +120,10 @@
 	/*Slider Parallax*/
 	.da-slide p {
 		display:none;
+	}
+
+	.logo {
+		font-size: 18px;
 	}
 }
 
@@ -151,6 +172,9 @@
 	}
 	.coming-soon-copyright p {
 		text-align: left;
+	}
+	.logo {
+		font-size: 18px;
 	}					
 }
  
@@ -177,6 +201,7 @@
 		width: auto;
 	}
 
+
 	/*Coming Soon Page*/
 	.coming-soon,
 	.coming-soon-plugin {
@@ -188,7 +213,11 @@
 	}
 	.coming-soon-copyright p {
 		text-align: left;
-	}				
+	}
+	.logo {
+		font-size: 18px;
+	}
+}				
 }
 
 @media (min-width: 767px) {
@@ -198,11 +227,21 @@
 	}
 }
 
+@media (min-width: 1200px){
+	.logo {
+		font-size: 30px;
+	}
+}
+
+
 /*Higher Resolutions*/
 @media (min-width: 1440px) {
 	/*Coming Soon Page*/
 	.coming-soon-plugin {
 		min-height: 330px;
+	}
+	.logo {
+		font-size: 30px;
 	}
 }
 
@@ -211,11 +250,17 @@
 	.coming-soon-plugin {
 		min-height: 410px;
 	}
+	.logo {
+		font-size: 30px;
+	}
 }
 
 @media (min-width: 1920px) {
 	/*Coming Soon Page*/
 	.coming-soon-plugin {
 		min-height: 560px;
+	}
+	.logo {
+		font-size: 30px;
 	}
 }
