Edit css for logos

--- a/beta/assets/css/style.css
+++ b/beta/assets/css/style.css
@@ -1869,3 +1869,8 @@ i.style-switcher-btn-option:hover {
 	padding: 7px;
 	text-shadow: none !important;
 }
+
+.slide-logo li{
+	background: #ccc;
+	margin: 5px 5px;
+}
